fix: clipping of SVG for "close" button

--- a/src/assets/styles/_modals.scss
+++ b/src/assets/styles/_modals.scss
@@ -36,8 +36,8 @@ $list-items-border-color: #c4c4c4;
     a.ws-modal-close {
       background-color: white;
       display: block;
-      width: 16.64px;
-      height: 16.64px;
+      width: 17px;
+      height: 17px;
       float: right;
       position: relative;
       top: 2px;
